<resources>
    <string name="app_name">Record Shop Frontend</string>
    <string name="record_shop_image">Record Shop Image</string>
    <string name="album">Album</string>
    <string name="genre">Genre...</string>
    <string name="album_name">Album name...</string>
    <string name="stock">Stock...</string>
    <string name="artist_name">Artist name...</string>
    <string name="add_album">Add Album</string>
    <string name="back_button">Back Button</string>
    <string name="update_album">Edit Album</string>
    <string name="relase_year">Relase year...</string>
    <string-array name="genre">
        <item>TRANCE</item>
        <item>HOUSE</item>
        <item>ROCK</item>
        <item>HIPHOP</item>
        <item>POP</item>
        <item>METAL</item>
        <item>DNB</item>
    </string-array>
</resources>
