<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="album"
            type="com.example.recordshopfrontend.model.Albums" />
        <variable
            name="clickHandler"
            type="com.example.recordshopfrontend.ui.addalbum.AddAlbumClickHandlers" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.addalbum.AddNewAlbumActivity">

        <EditText
            android:id="@+id/editTextText9"
            android:layout_width="234dp"
            android:layout_height="52dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="89dp"
            android:ems="10"
            android:hint="@string/genre"
            android:inputType="text"
            android:text="@={album.genre}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText10" />

        <EditText
            android:id="@+id/editTextText10"
            android:layout_width="234dp"
            android:layout_height="52dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="89dp"
            android:ems="10"
            android:hint="@string/album_name"
            android:inputType="text"
            android:text="@={album.albumName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText" />

        <EditText
            android:id="@+id/editTextText8"
            android:layout_width="234dp"
            android:layout_height="52dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="85dp"
            android:ems="10"
            android:inputType="number"
            android:text="@={`` + album.stock}"
            android:hint="@string/stock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText9" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="234dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginStart="88dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="89dp"
            android:elevation="2dp"
            android:ems="10"
            android:hint="@string/artist_name"
            android:inputType="text"
            android:text="@={album.artist}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="234dp"
            android:layout_height="52dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="85dp"
            android:layout_marginBottom="62dp"
            android:ems="10"
            android:hint="Year..."
            android:inputType="number"
            android:text="@={`` + album.releaseYear}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText8"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="232dp"
            android:layout_height="48dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="99dp"
            android:background="#90DDE2"
            android:backgroundTintMode="screen"
            android:fontFamily="cursive"
            android:text="post album"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="129dp"
            android:layout_height="58dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="28dp"
            android:text="@string/add_album"
            android:textSize="16sp"
            android:onClick="@{clickHandler::onSubmitClickHandler}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText7"

            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="33dp"
            android:contentDescription="@string/back_button"
            android:onClick="@{clickHandler::onBackButtonClicked}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

